# raphael-wiggums

./: CLAUDE.md  README.md  main.py  pyproject.toml  raphael.py  wiggums.py
docs/plans/: 2026-02-27-plan-review-command.md  2026-02-27-sir-wiggums-core.md
execute/: CLAUDE.md  cost.py  git.py  parser.py  prompt.py  runner.py  state.py  supervisor.py  wiggum_log.py
generate/: prd.py
prompts/: coherence_check.md  critique_codebase.md  notes_to_prd.md  prd_to_stories.md  reduce_understanding.md  review_plan.md  story_executor.md  understand_module.md
review/: reviewer.py
tests/: CLAUDE.md  test_cli.py  test_coherence.py  test_cost.py  test_critic.py  test_critique_cli.py  test_generate.py  test_git.py  test_integration.py  test_mapper.py  test_parser.py  test_prompt.py  test_reducer.py  test_repomap.py  test_review_cli.py  test_reviewer.py  test_runner.py  test_runner_cost.py  test_smoke.py  test_state.py  test_supervisor.py  test_understand_cli.py
understand/: coherence.py  critic.py  mapper.py  pipeline.py  reducer.py  repomap.py
